# pycroglia

./: README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  pull_request_template.md
.github/workflows/: core_integration_tests.yml  core_unit_test.yml  python_linter_check.yml  ui_unit_test.yml
docs/: CONTRIBUTING.md  contribute.md
pycroglia/core/: clustering.py  connected_components.py  erosion.py  files.py  filters.py  labeled_cells.py  segmentation.py  territorial_volume.py
pycroglia/core/errors/: errors.py
pycroglia/core/skeletonize/: msfm.py  shortest_path.py  skeleton.py
pycroglia/core/skeletonize/raytracing/: euler.py  factory.py  rk4.py  simple.py  stepper.py
pycroglia/core/tests/integration/: helpers.py  test_files.py
pycroglia/core/tests/unit/: test_clustering.py  test_connected_components.py  test_erosion.py  test_files.py  test_filters.py  test_labeled_cells.py  test_segmentation.py  test_territorial_volume.py
pycroglia/lib/skeletonize/: msfm.py
pycroglia/lib/skeletonize/raytracing/: euler.py  rk4.py  simple.py  stepper.py
pycroglia/ui/controllers/: ch_editor.py  segmentation_state.py
pycroglia/ui/widgets/: ch_config.py  ch_img.py  file_selection_editor.py  img_viewer.py  labeled_widgets.py  main_stack.py  segmentation_editor.py  two_column_list.py
pycroglia/ui/widgets/analysis/: cell_selector.py
pycroglia/ui/widgets/common/: img_viewer.py  labeled_widgets.py  two_column_list.py
pycroglia/ui/widgets/imagefilters/: configurator.py  editors.py  results.py  stacks.py
(+30 files in other folders)
