[project]
name = "pycroglia"
version = "0.1.0"
description = "Software for isolating and analyzing microglial morphology."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "tifffile>=2025.5.10",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
