[project]
name = "pycroglia"
version = "0.1.0"
description = "Software for isolating and analyzing microglial morphology."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "tifffile>=2025.5.10",
]

[dependency-groups]
core = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "tifffile>=2025.5.10",
]
core-test = [
    "h5py>=3.14.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
dev = [
    "h5py>=3.14.0",
    "pytest>=8.4.1",
    "pytest-qt>=4.5.0",
    "ruff>=0.12.4",
]
